adding imputation method for age

--- a/titanic-survival-model-notebook.ipynb
+++ b/titanic-survival-model-notebook.ipynb
@@ -181,7 +181,11 @@
       "cell_type": "markdown",
       "source": [
         "## Age\n",
-        "Before starting, there are some missing data that needs to be handled. Therefore it must be filled with mean of age from all data."
+        "Before starting, there are some missing data that needs to be handled. Therefore it must be filled with mean of age from all data. But this approach is not suggested because it doesn't preserve the relationship between data. There might be misfilled on an old person 80 years of age with 45 years. In saving passenger, we both know that the oldest passenger is prioritized.  \n",
+        "\n",
+        "the details are already there within the name of the passenger. We can apply **educated guessing** based on their title like Mr., Mrs, Ms., etc. \n",
+        "\n",
+        "We will group all passenger who has the same title and compute the mean. Then, we can impute to the missing data in \"Age\" column."
       ],
       "metadata": {
         "id": "EefHNuiYKE9G"
@@ -204,37 +208,21 @@
     {
       "cell_type": "code",
       "source": [
-        "titanic_all_age_mean = titanic_all.copy()\n",
-        "titanic_all_age_mean[titanic_all_age_mean['Age'].isna()] = titanic_all['Age'].mean()\n",
-        "plt.title('Distribution of Age (Mean Filled)')\n",
-        "sns.distplot(x=titanic_all_age_mean['Age'], hist=False) \n",
-        "display(titanic_all_age_mean.describe()['Age'])\n",
-        "plt.show()"
+        "title_age = {}\n",
+        "unique_titles = titanic_all['Name'] \\\n",
+        "                .apply(lambda x: x.split(',')[1].split('.')[0].strip()).unique()\n",
+        "\n",
+        "for title in unique_titles:\n",
+        "  title_age[title] = float(titanic_all.loc[\n",
+        "      titanic_all['Name'] \\\n",
+        "      .apply(lambda x: x.split(',')[1].split('.')[0].strip()) == title, 'Age'] \\\n",
+        "      .mean() \\\n",
+        "      .round())\n",
+        "\n",
+        "titanic_all['Age'] = titanic_all.apply(lambda row: title_age[row['Name'].split(',')[1].split('.')[0].strip()] if np.isnan(row['Age']) else row['Age'], axis=1)"
       ],
       "metadata": {
         "id": "QFtm7gNAx9wO"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "titanic_all.loc[titanic_all['Age'].isna(), 'Age'] = titanic_all['Age'].mean()"
-      ],
-      "metadata": {
-        "id": "2BpO0hq84CFJ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "titanic_all"
-      ],
-      "metadata": {
-        "id": "p3wvZS2bs7a-"
       },
       "execution_count": null,
       "outputs": []
@@ -2598,9 +2586,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "pNq0zQQU74BM"
       }
@@ -2629,7 +2615,6 @@
       "provenance": [],
       "private_outputs": true,
       "toc_visible": true,
-      "history_visible": true,
       "include_colab_link": true
     }
   },
