--- a/titanic-survival-model-notebook.ipynb
+++ b/titanic-survival-model-notebook.ipynb
@@ -544,7 +544,7 @@
         "               aggfunc='median'))\n",
         "\n",
         "facet_grid_med = sns.FacetGrid(data=titanic_all, col='Pclass', \n",
-        "                               sharey=False, sharex=False)\n",
+        "                               sharey=True, sharex=True)\n",
         "facet_grid_med.map_dataframe(sns.barplot, \n",
         "                             x='Embarked', \n",
         "                             y='FarePerPerson', \n",
@@ -560,7 +560,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "As we can see the FarePerPerson is high on Pclass=1. Pclass=2 and Pclass3 (Embarked C) is higher other.\n"
+        "As we can see the FarePerPerson is high on Pclass=1.\n"
       ],
       "metadata": {
         "id": "chCBHBVQF_ok"
@@ -616,29 +616,6 @@
       ],
       "metadata": {
         "id": "W9zdI_1jWodf"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# display(pd.pivot_table(data=titanic_test, \n",
-        "#                index='Pclass', \n",
-        "#                columns='Embarked', \n",
-        "#                values='FarePerPerson', \n",
-        "#                aggfunc='median'))\n",
-        "\n",
-        "# facet_grid_med = sns.FacetGrid(data=titanic_test, col='Pclass', \n",
-        "#                                sharey=False, sharex=False)\n",
-        "# facet_grid_med.map_dataframe(sns.barplot, \n",
-        "#                              x='Embarked', \n",
-        "#                              y='FarePerPerson', \n",
-        "#                              estimator=np.median)\n",
-        "# plt.show()"
-      ],
-      "metadata": {
-        "id": "FSqJ32tYnPe_"
       },
       "execution_count": null,
       "outputs": []
@@ -741,7 +718,7 @@
         "titanic_test = titanic_all[titanic_all['train_test']==1]\n",
         "titanic_num = ['Age', 'SibSp', 'Parch', 'Fare', 'FamilySize', 'FriendSize', 'GroupSize', 'FarePerPerson']\n",
         "\n",
-        "fig, ax = plt.subplots(nrows=len(titanic_num), figsize=[7, len(titanic_num)*5])\n",
+        "fig, ax = plt.subplots(nrows=len(titanic_num), figsize=[7, len(titanic_num)*7])\n",
         "\n",
         "for i, col in enumerate(titanic_num):\n",
         "    sns.histplot(titanic_train[col], linewidth=0, ax=ax[i])\n",
@@ -919,7 +896,6 @@
       "source": [
         "# Create a heat map Survived vs Pclass Columns\n",
         "grouped_by_survived_pclass = titanic_all.groupby(['Pclass', 'Survived'])\n",
-        "\n",
         "# convert index survived to a column using unstack()\n",
         "print(grouped_by_survived_pclass.size().unstack())\n",
         "\n",
@@ -1493,7 +1469,6 @@
         "    'Jonkheer': 'Royalty',\n",
         "    'Don': 'Royalty',\n",
         "    'Dona': 'Royalty',\n",
-        "\n",
         "}"
       ],
       "metadata": {
